GNOME Bugzilla – Bug 596350
sidebar does not save size
Last modified: 2013-03-13 10:29:41 UTC
While listening to my music with totem, I often open the Sidebar and select Properties from the dropdown menu in order to see the metadata of my music. However, the width of the sidebar is often not wide enough to display the song's entire title, album or comment so I manually increase the size of the Sidebar. However, if I restart totem the size of the Sidebar has been reset back to the default instead of being saved. I think that whenever a user changes the width of the Sidebar area that size should be saved and reapplied the next time that the sidebar is opened and the next time that totem is started. I have no problem with totem automatically resizing the video half of the window but I think that the Sidebar width should always be preserved.
Totem already does that and saves the width of the sidebar in ~/.config/totem/state.ini on exit. You should check whether those values change on exit, and whether Totem exits properly as well.
Thanks for pointing out that file. I checked it and totem does save the sidebar width but only if the sidebar is visible. However, if the sidebar is hidden, the width property in this file is set to 0. I feel that the width should always be saved whether the sidebar is showing or not. Even when the value is saved, totem does not restore it correctly. For example, I just played an audio file and expanded the sidebar to 500 pixels so that I could see all of the song's metadata. When I closed totem and checked state.ini, it correctly saved 500 as the width of the sidebar. However, when I open the same song file, the sidebar is shrunk to 230 pixels (not wide enough to see the metadata) and that is the new sidebar width value that is saved.
This should fix it. Please reopen if you still see the problem with Totem 3.8, along with clear reproducer bugs. commit 8354660c356c0bea0a4e0157be6916b7c6e2980b Author: Bastien Nocera <hadess@hadess.net> Date: Wed Mar 13 11:23:27 2013 +0100 main: Save sidebar size before hiding it https://bugzilla.gnome.org/show_bug.cgi?id=596350