main: Save sidebar size before hiding it

https://bugzilla.gnome.org/show_bug.cgi?id=596350